# Piscine-Python-for-Data-Science

ex00/: Hello.py
ex02/: find_ft_type.py
module1/ex01/: format_ft_time.py
module1/ex02/: find_ft_type.py
module1/ex03/: NULL_not_found.py  tester.py
module1/ex04/: whatis.py
module1/ex05/: building.py
module1/ex06/: filterstring.py  ft_filter.py
module1/ex07/: sos.py
module1/ex08/: Loading.py
module1/ex09/: LICENSE  README.md  pyproject.toml
module1/ex09/ft_package/: count_in_list.py
module1/ex09/ft_package.egg-info/: PKG-INFO
