[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"                  # match example exactly
description = "A sample test package"
readme = "README.md"
authors = [
    {name = "hrigrigo", email = "hrigrigo@student.42yerevan.am"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/grigoryanhripsime/Piscine-Python-for-Data-Science/tree/main/module1"

[tool.setuptools]
packages = ["ft_package"]
